1.初步修正AST类生成细节 2.动态加载工具URLClassLoader不能序列化，所以还是用Class.forName()方式来重新生成class文件调用 3.在语法分析过程中终结符—非终结符转换的问题，计划放在Parser中处理。 4.解决了第一次动态编译调用类总是出错的问题，虽然这种状态目前仅能在IDE中实现。