@@ -3,6 +3,7 @@ package Utils;
 import Exceptions.GrammerMakerError.GrammerBaseException;
 import Exceptions.GrammerMakerError.Impl.CompileException;
 import Tree_Span.BranchTreeRoot;
+import Tree_Span.S;
 
 import javax.tools.*;
 import java.io.File;
@@ -11,23 +12,21 @@ import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLClassLoader;
 import java.util.ArrayList;
-import Tree_Span.Impl.S;
 
 public class RunampCompileASTClasses implements Serializable {
     private String classpath1;
     private String classpath2;
-    private String basePath;
-    private URLClassLoader loader;
+//    private String basePath;
+//    private URLClassLoader loader;
 
     private RunampCompileASTClasses() throws UnsupportedEncodingException, MalformedURLException {
-        classpath1=java.net.URLDecoder.decode(new Tree_Span.S().getClass().getResource("").getFile(),"utf-8").substring(1);
+        classpath1=java.net.URLDecoder.decode(new Tree_Span.S().getClass().getResource("").getFile(),"utf-8");
+        classpath1=classpath1.substring(1,classpath1.indexOf("Tree_Span/"));
         classpath2=java.net.URLDecoder.decode(new Tree_Span.S().getClass().getResource("/").getFile(),"utf-8").substring(1);
-        basePath=classpath2.replace("target/test-classes/","src/main/java/Tree_Span/ImplClasses/");
+//        basePath=classpath2.replace("target/test-classes/","src/main/java/Tree_Span/ImplClasses/");
 //        loader=ClassLoader.getSystemClassLoader();
-        loader=new URLClassLoader(new URL[]{new URL("file://"+basePath+"Tree_Span/Impl/")},this.getClass().getClassLoader());
+//        loader=new URLClassLoader(new URL[]{new URL("file://"+basePath+"Tree_Span/Impl/")},this.getClass().getClassLoader());
 
     }
 
@@ -50,14 +49,14 @@ public class RunampCompileASTClasses implements Serializable {
         ops.add("-classpath");
         StringBuilder classpath=new StringBuilder();
         classpath.append(classpath1);
-        classpath.delete(classpath.indexOf("Tree_Span/"),classpath.length()-1);
+//        classpath.delete(classpath.indexOf("Tree_Span/"),classpath.length()-1);
         classpath.insert(0,';');
         classpath.insert(0,classpath2);
         ops.add(classpath.toString());
         ops.add("-sourcepath");
         ops.add(classpath2.replace("target/test-classes/","src/main/java/"));
         ops.add("-d");
-        ops.add(basePath);
+        ops.add(classpath1);
 
         JavaCompiler.CompilationTask task =compiler.getTask(null, manager, diagnostics, ops, null, it);
 
@@ -76,10 +75,11 @@ public class RunampCompileASTClasses implements Serializable {
 
     public BranchTreeRoot ClassLoader(String className) throws ClassNotFoundException, IllegalAccessException, InvocationTargetException, InstantiationException {
         try {
-            return (BranchTreeRoot) loader.loadClass(className).getEnclosingConstructor().newInstance();
+            return (BranchTreeRoot) Class.forName(className).getConstructor().newInstance();
         }
         catch (NoClassDefFoundError e){
-            System.out.println(System.getProperty("java.classpath"));
+            return new S();
+        } catch (NoSuchMethodException e) {
             return new S();
         }
     }
